--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+
+  <script>
+    function myFunction1() {
+      document.getElementById("demo1").innerHTML = "Paraghraph changed.";
+    }
+  </script>
+
 </head>
 <body>
-  
-  <h1>preeti</h1>
-  <p>rk</p>
+  <h2>Demo java script in head</h2>
+  <p id="demo1">A paragraph.</p>
+  <button type="button" onclick="myFunction1()">try it</button>
 
 </body>
 </html>
