add js folder an file

--- a/index.html
+++ b/index.html
@@ -17,5 +17,20 @@
   <p id="demo1">A paragraph.</p>
   <button type="button" onclick="myFunction1()">try it</button>
 
+  <p id="demo2"></p>
+
+  <p id="demo3"></p>
+
+  <p id="demo4"></p>
+
+
+
+
+
+
+
+
+  
+  <script src="js/script.js"></script>
 </body>
 </html>
