--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <script>
     function myFunction1() {
       document.getElementById("demo1").innerHTML = "Paraghraph changed.";
+      document.getElementById('demo4').innerHTML = "hello dolly";
+      document.getElementById("demo5").innerHTML = "how are u?";  
     }
   </script>
 
@@ -23,12 +25,19 @@
 
   <p id="demo4"></p>
 
-
-
-
-
-
-
+  <p id="demo5"></p>
+  <P id="demo6"></P>
+  <p id="demo7"></p>
+  <P id="demo8"></P>
+  <p id="demo9"></p>
+  <p id="demo10"></p>
+  <p id="demo11"></p>
+  <p id="demo12"></p>
+  <p id="demo13"></p>
+  <P id="demo14"></P>
+  <P id="demo15"></P>
+  <p id="demo16"></p>
+  <p id="demo17"></p>
 
   
   <script src="js/script.js"></script>
