use event onclick

--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
   <P id="demo15"></P>
   <p id="demo16"></p>
   <p id="demo17"></p>
-
   <p id="demo18"></p>
+
+  <p id="demo19"></p>
+  <button onclick="document.getElementById('demo19').innerHTML = Date()"> time </button> <br><br>
+
+  <button onclick="this.innerHTML = Date()">Time</button>
   
   <script src="js/script.js"></script>
 </body>
