--- a/index.html
+++ b/index.html
@@ -41,9 +41,26 @@
   <p id="demo18"></p>
 
   <p id="demo19"></p>
-  <button onclick="document.getElementById('demo19').innerHTML = Date()"> time </button> <br><br>
+  <button onclick="document.getElementById('demo19').innerHTML = Date()"> document Time </button> <br><br>
 
-  <button onclick="this.innerHTML = Date()">Time</button>
+  <button onclick="this.innerHTML = Date()">this Time</button>
+
+  <p id="demo20"></p>
+  <button onclick="displayDate()">  function Time</button>
+
+  <p id="demo21"></p>
+ 
+
+
+
+
+
+
+
+
+
+
+  <p>end</p>
   
   <script src="js/script.js"></script>
 </body>
