--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
   <button onclick="displayDate()">  function Time</button>
 
   <p id="demo21"></p>
- 
+  <p id="demo22"></p>
+  <p id="demo23"></p>
 
 
 
