string replace and search method

--- a/index.html
+++ b/index.html
@@ -52,10 +52,12 @@
   <p id="demo22"></p>
   <p id="demo23"></p>
 
+  <button onclick="mmyfuction()">try it</button>
+  <p id="demp24">plz visit tcs </p>
 
-
-
-
+  <p id="demo25"></p>
+  <p id="demo26"></p>
+  <p id="demo27"></p>
 
 
 
